# cuppa

./: .bazelrc  .gitignore  MODULE.bazel  README.md  build.gradle
.github/workflows/: build.yml
cuppa/: BUILD
cuppa-junit/: BUILD  build.gradle
cuppa-junit/src/main/java/org/forgerock/cuppa/junit/: CuppaRunner.java
cuppa-surefire/: BUILD  build.gradle
cuppa-surefire/src/main/java/org/forgerock/cuppa/maven/surefire/: CuppaSurefireProvider.java
cuppa/src/main/java/org/forgerock/cuppa/: Configuration.java  Runner.java  ServiceLoaderConfigurationProvider.java
gradle/wrapper/: gradle-wrapper.properties
